# swagger.json
@@ -345,153 +345,25 @@
         ]
       }
     },
-    "/search/{userId}/pet/chip/{chipId}": {
-      "get": {
+    "/pets/search": {
+      "post": {
         "tags": [
-          "search"
+          "pet"
         ],
-        "summary": "Search pets by chipId",
-        "operationId": "search pets by chipId",
+        "summary": "Search pets",
+        "operationId": "search_pets",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of user for which to fetch wallet",
+            "in": "body",
+            "name": "body",
+            "description": "Search object",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "chipId",
-            "in": "path",
-            "description": "Chip ID of Pet",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pets list",
             "schema": {
-              "$ref": "#/definitions/ArrayOfPets"
+              "$ref": "#/definitions/PetsSearch"
             }
-          }
-        },
-        "security": [
-          {
-            "authentication": []
-          }
-        ]
-      }
-    },
-    "/search/{userId}/pet/breed/{breed}": {
-      "get": {
-        "tags": [
-          "search"
-        ],
-        "summary": "Search pets by breed",
-        "operationId": "search pets by breed",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of user for which to fetch wallet",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "breed",
-            "in": "path",
-            "description": "Breed of Pet",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pets list",
-            "schema": {
-              "$ref": "#/definitions/ArrayOfPets"
-            }
-          }
-        },
-        "security": [
-          {
-            "authentication": []
-          }
-        ]
-      }
-    },
-    "/search/{userId}/pet/type/{type}": {
-      "get": {
-        "tags": [
-          "search"
-        ],
-        "summary": "Search pets by type",
-        "operationId": "search pets by type",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of user for which to fetch wallet",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "type",
-            "in": "path",
-            "description": "Type of Pet",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pets list",
-            "schema": {
-              "$ref": "#/definitions/ArrayOfPets"
-            }
-          }
-        },
-        "security": [
-          {
-            "authentication": []
-          }
-        ]
-      }
-    },
-    "/search/{userId}/pet/country/{country}": {
-      "get": {
-        "tags": [
-          "search"
-        ],
-        "summary": "Search pets by country",
-        "operationId": "search pets by country",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of user for which to fetch wallet",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "country",
-            "in": "path",
-            "description": "country of Pet",
-            "required": true,
-            "type": "string"
           }
         ],
         "responses": {
@@ -676,6 +548,26 @@
         },
         "ptsBalance": {
           "type": "number"
+        }
+      }
+    },
+    "PetsSearch": {
+      "type": "object",
+      "properties": {
+        "userID": {
+          "type": "string"
+        },
+        "chipId": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        },
+        "breed": {
+          "type": "string"
+        },
+        "country": {
+          "type": "string"
         }
       }
     }
